--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.58.0",
     "@google/generative-ai": "^0.24.1",
+    "@tailwindcss/typography": "^0.5.16",
     "cohere-ai": "^7.18.0",
     "framer-motion": "^12.23.12",
     "next": "15.4.6",
     "openai": "^5.12.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
