--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "openai": "^5.12.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0"
